# registream

./: .gitignore  CHANGELOG.md  CITATION.cff  DEVELOPMENT.md  README.md  citations.yaml  sync_artifacts.sh
docs/: python.md  stata.md
python/: .gitignore  check_namespace.sh  publish.sh  verify_python.sh
python/registream-core/: README.md  pyproject.toml
python/registream-core/src/registream/: __main__.py  _citation_data.py  citation.py  config.py  dirs.py  first_run.py  info.py  metadata.py  schema.py  updates.py  usage.py  utils.py
python/registream-core/tests/: conftest.py  test_citation.py  test_config.py  test_dirs.py  test_first_run.py  test_info.py  test_parity_01_config_initialization.py  test_parity_06_update_system.py  test_parity_07_update_default.py  test_parity_08_version_and_cite.py  test_parity_09_auto_update.py  test_parity_10_update_notification.py  test_parity_11_telemetry_config.py  test_parity_13_version_resolution.py  test_parity_14_network_timing.py  test_parity_15_timestamp_cache.py  test_updates.py  test_usage.py  test_utils.py
python/registream-meta/: README.md  pyproject.toml
r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  publish.sh
r/R/: cache.R  citation.R  citation_data.R  config.R  first_run.R  info.R  metadata.R  parse_stata_labels.R  schema.R  time.R  updates.R  usage.R  utils.R  zzz.R
r/inst/: CITATION
r/man/: registream-internal.Rd  rs_cite.Rd  rs_first_run.Rd  rs_info.Rd  rs_stats.Rd  rs_update.Rd
r/tests/: testthat.R
stata/dev/: auto_approve.do  host_override.do  test_manual.do  version_override.do
stata/src/: _rs_config.ado  _rs_metadata.ado  _rs_updates.ado  _rs_usage.ado  _rs_utils.ado  registream.ado  registream.sthlp
tools/: render_citations.py
(+32 files in other folders)
