[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "registream-core"
version = "3.0.0"
description = "RegiStream Python core: config, telemetry, metadata cache, schema validator."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jeffrey Clark", email = "jeffrey@registream.org" },
    { name = "Jie Wen", email = "jie@registream.org" },
]
dependencies = [
    "pandas>=3.0.2",
    "platformdirs>=4.9.6",
    "pyreadstat>=1.3.3",
    "requests>=2.33.1",
    "tomli-w>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/registream"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
